@@ -19,7 +19,14 @@
 
 package org.matsim.contrib.util;
 
-import java.util.*;
+import java.util.Comparator;
+import java.util.List;
+import java.util.PriorityQueue;
+import java.util.stream.Stream;
+
+import javax.annotation.Nullable;
+
+import com.google.common.base.Preconditions;
 
 /**
  * Sorts from smallest to largest. If the opposite should be the case then add elements with their values negated:
@@ -27,55 +34,56 @@ import java.util.*;
  * version of heapsort or quicksort.
  * <p>
  * More info: <a href="http://en.wikipedia.org/wiki/Partial_sorting">Partial sorting</a>
- * 
+ *
  * @param <T>
  */
 public class PartialSort<T> {
-	private static class ElementValuePair<T> implements Comparable<ElementValuePair<T>> {
-		private final T element;
-		private final double value;
-
-		public ElementValuePair(T element, double value) {
-			this.element = element;
-			this.value = value;
-		}
-
-		@Override
-		public int compareTo(ElementValuePair<T> o) {
-			return -Double.compare(value, o.value);// reversed comparison (the smallest is the last in the queue)
-		}
+	public static <T> List<T> kSmallestElements(int k, Stream<T> elements, Comparator<T> comparator) {
+		PartialSort<T> nearestRequestSort = new PartialSort<>(k, comparator);
+		elements.forEach(nearestRequestSort::add);
+		return nearestRequestSort.kSmallestElements();
 	}
 
-	private final int size;
-	private final PriorityQueue<ElementValuePair<T>> kSmallestElements;// descending order: from k-th to 1-st
+	private final int k;
+	private final Comparator<T> comparator;
+	@Nullable
+	private final PriorityQueue<T> kSmallestElements;// descending order: from k-th to 1-st
 
-	public PartialSort(int size) {
-		this.size = size;
-		kSmallestElements = new PriorityQueue<>(size);
+	public PartialSort(int k, Comparator<T> comparator) {
+		Preconditions.checkArgument(k >= 0, "k must not be negative.");
+		this.k = k;
+		this.comparator = comparator;
+		kSmallestElements = k == 0 ? null : new PriorityQueue<>(k, comparator.reversed());
 	}
 
-	public void add(T element, double value) {
-		if (kSmallestElements.size() < size) {
-			kSmallestElements.add(new ElementValuePair<>(element, value));
-		} else {
-			if (Double.compare(value, kSmallestElements.peek().value) < 0) {
+	public void add(T element) {
+		if (kSmallestElements != null) {
+			if (kSmallestElements.size() < k) {
+				kSmallestElements.add(element);
+			} else if (comparator.compare(element, kSmallestElements.peek()) < 0) {
 				kSmallestElements.poll();
-				kSmallestElements.add(new ElementValuePair<>(element, value));
+				kSmallestElements.add(element);
 			}
 		}
 	}
 
 	/**
-	 * Gets k smallest elements (side effect: they are removed from the queue -- the queue gets empty).
-	 * 
+	 * Gets k smallest elements.
+	 * <p>
+	 * SIDE EFFECT: elements are removed from the queue.
+	 *
 	 * @return list containing k smallest elements sorted ascending: from the smallest to the k-th smallest
 	 */
-	public List<T> retriveKSmallestElements() {
+	public List<T> kSmallestElements() {
+		if (kSmallestElements == null) {
+			return List.of();
+		}
+
 		@SuppressWarnings("unchecked")
 		T[] array = (T[])new Object[kSmallestElements.size()];
 		for (int i = array.length - 1; i >= 0; i--) {
-			array[i] = kSmallestElements.poll().element;
+			array[i] = kSmallestElements.poll();
 		}
-		return Arrays.asList(array);
+		return List.of(array);
 	}
 }
