@@ -19,10 +19,7 @@
  * *********************************************************************** */
 package org.matsim.contrib.socnetsim.jointtrips.router;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.*;
 
 import java.util.Arrays;
 import java.util.Collection;
@@ -38,18 +35,19 @@ import org.matsim.api.core.v01.population.Person;
 import org.matsim.api.core.v01.population.Plan;
 import org.matsim.api.core.v01.population.PlanElement;
 import org.matsim.api.core.v01.population.PopulationFactory;
-import org.matsim.core.config.ConfigUtils;
-import org.matsim.core.population.PopulationUtils;
-import org.matsim.core.router.EmptyStageActivityTypes;
-import org.matsim.core.router.RoutingModule;
-import org.matsim.core.router.StageActivityTypes;
-import org.matsim.core.router.TripRouter;
-import org.matsim.core.scenario.ScenarioUtils;
-import org.matsim.facilities.Facility;
-
 import org.matsim.contrib.socnetsim.jointtrips.population.DriverRoute;
 import org.matsim.contrib.socnetsim.jointtrips.population.JointActingTypes;
 import org.matsim.contrib.socnetsim.jointtrips.population.PassengerRoute;
+import org.matsim.core.config.Config;
+import org.matsim.core.config.ConfigUtils;
+import org.matsim.core.population.PopulationUtils;
+import org.matsim.core.population.routes.NetworkRoute;
+import org.matsim.core.population.routes.RouteUtils;
+import org.matsim.core.router.RoutingModule;
+import org.matsim.core.router.TripRouter;
+import org.matsim.core.router.TripStructureUtils;
+import org.matsim.core.scenario.ScenarioUtils;
+import org.matsim.facilities.Facility;
 
 /**
  * @author thibautd
@@ -57,14 +55,15 @@ import org.matsim.contrib.socnetsim.jointtrips.population.PassengerRoute;
 public class JointPlanRouterTest {
 	@Test
 	public void testDriverIdIsKept() throws Exception {
-        final PopulationFactory populationFactory =
+		final Config config = ConfigUtils.createConfig();
+		final PopulationFactory populationFactory =
                 ScenarioUtils.createScenario(
-		        ConfigUtils.createConfig()).getPopulation().getFactory();
+				    config).getPopulation().getFactory();
 
 		final JointPlanRouter testee =
 			new JointPlanRouter(
 					createTripRouter(
-						populationFactory),
+						populationFactory, config),
 					null);
 
 		final Id<Link> linkId = Id.create( "some_link" , Link.class );
@@ -76,6 +75,7 @@ public class JointPlanRouterTest {
 		act1.setEndTime( 1035 );
 		plan.addActivity( act1 );
 		final Leg leg = populationFactory.createLeg( JointActingTypes.PASSENGER );
+		TripStructureUtils.setRoutingMode( leg, JointActingTypes.PASSENGER );
 		plan.addLeg( leg );
 		plan.addActivity(
 				populationFactory.createActivityFromLinkId(
@@ -108,14 +108,15 @@ public class JointPlanRouterTest {
 
 	@Test
 	public void testPassengerIdIsKept() throws Exception {
-        final PopulationFactory populationFactory =
+		final Config config = ConfigUtils.createConfig();
+		final PopulationFactory populationFactory =
                 ScenarioUtils.createScenario(
-		        ConfigUtils.createConfig()).getPopulation().getFactory();
+				    config).getPopulation().getFactory();
 
 		final JointPlanRouter testee =
 			new JointPlanRouter(
 					createTripRouter(
-						populationFactory),
+						populationFactory, config),
 					null);
 
 		final Id<Link> linkId = Id.create( "some_link" , Link.class );
@@ -127,6 +128,7 @@ public class JointPlanRouterTest {
 		act1.setEndTime( 1035 );
 		plan.addActivity( act1 );
 		final Leg leg = populationFactory.createLeg( JointActingTypes.DRIVER );
+		TripStructureUtils.setRoutingMode( leg, JointActingTypes.DRIVER );
 		plan.addLeg( leg );
 		plan.addActivity(
 				populationFactory.createActivityFromLinkId(
@@ -165,10 +167,10 @@ public class JointPlanRouterTest {
 					newRoute.getPassengersIds() ));
 	}
 
-	private static TripRouter createTripRouter(final PopulationFactory populationFactory) {
-		final TripRouter instance = new TripRouter();
-
-		instance.setRoutingModule(
+	private static TripRouter createTripRouter(final PopulationFactory populationFactory, Config config) {
+		final TripRouter.Builder builder = new TripRouter.Builder(config) ;
+		
+		builder.setRoutingModule(
 				JointActingTypes.DRIVER,
 				new DriverRoutingModule(
 					JointActingTypes.DRIVER,
@@ -181,22 +183,22 @@ public class JointPlanRouterTest {
 								final Facility toFacility,
 								final double departureTime,
 								final Person person) {
-							return Arrays.asList( PopulationUtils.createLeg(TransportMode.car) );
+							NetworkRoute route = RouteUtils.createNetworkRoute(List.of(fromFacility.getLinkId(), toFacility.getLinkId()), null);
+							route.setTravelTime(10);
+							Leg leg =  PopulationUtils.createLeg(TransportMode.car);
+							leg.setRoute(route);
+							return List.of(leg);
 						}
 
-						@Override
-						public StageActivityTypes getStageActivityTypes() {
-							return EmptyStageActivityTypes.INSTANCE;
-						}
 					}));
-
-		instance.setRoutingModule(
+		
+		builder.setRoutingModule(
 				JointActingTypes.PASSENGER,
 				new PassengerRoutingModule(
 					JointActingTypes.PASSENGER,
 					populationFactory));
 
-		return instance;
+		return builder.build() ;
 	}
 }
 
